# FlashMemoryDev

./: .gitmodules  CMakeLists.txt  LICENSE
cmake/: embedded_targets.cmake
config/freertos/: FreeRTOSConfig.h
dev/VisualStudio/AT45DBTests/: AT45DBTests.sln
dev/VisualStudio/AT45DBTests/AT45DBTests/: AT45DBTests.vcxproj  AT45DBTests.vcxproj.filters  main.cpp  packages.config
dev/VisualStudio/AT45DBTests/HWTests/: HWTests.vcxproj  HWTests.vcxproj.filters  main.cpp  packages.config
tests/common/: CMakeLists.txt  test_common_resources.cpp  test_common_resources.hpp  test_get_device_id.cpp  test_open_close.cpp  test_read_write_erase.cpp
tests/hardware/: test_at25.cpp
